--- a/views/practitioner_search.html.twig
+++ b/views/practitioner_search.html.twig
@@ -6,27 +6,54 @@
 {% block content %}
     <h2 class="text-center">{{ block('title') }}</h2>
     <div class="well">
-        <div id="myTabContent" class="tab-content">
-            <form class="form-horizontal" role="form" action="/practitioner/results/" method="post">
-                <div class="form-group">
-                    <label class="col-sm-2 col-sm-offset-1 control-label">Famille</label>
-                    <div class="col-sm-7">
-                        <select class="form-control" name="type">
-                            {% for type in types %}
-                                <option value="{{ type.id }}">{{ type.name }}</option>
-                            {% endfor %}
-                        </select>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#search-easy">Recherche normale</a></li>
+            <li><a data-toggle="tab" href="#search-level2">Recherche avancée</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="search-easy" class="tab-pane fade in active">
+                <br/>
+                <form class="form-horizontal" role="form" action="/practitioner/results/" method="post">
+                    <div class="form-group">
+                        <label class="col-sm-2 col-sm-offset-1 control-label">Famille</label>
+                        <div class="col-sm-7">
+                            <select class="form-control" name="type">
+                                {% for type in types %}
+                                    <option value="{{ type.id }}">{{ type.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-3 col-sm-offset-5">
-                        <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-search"></span> Rechercher</button>
+                    <div class="form-group">
+                        <div class="col-sm-3 col-sm-offset-5">
+                            <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-search"></span> Rechercher</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <div id="search-level2" class="tab-pane fade">
+                <br/>
+                <form class="form-horizontal" role="form" action="/practitioner/results-advanced/" method="post">
+                    <div class="form-group">
+                        <label class="col-sm-2 col-sm-offset-1 control-label">Nom</label>
+                        <div class="col-sm-3">
+                            <input type="text" name="name"/>                      
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 col-sm-offset-1 control-label">Ville</label>
+                        <div class="col-sm-3">
+                            <input type="city" name="city"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-3 col-sm-offset-5">
+                            <button type="submit" class="btn btn-default btn-primary"><span class="glyphicon glyphicon-search"></span> Rechercher</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div id="myTabContent" class="tab-content">
 
-        </div>
     </div>
 {% endblock %}
