--- a/web/css/gsb-report.css
+++ b/web/css/gsb-report.css
@@ -5,3 +5,12 @@ body {
 h1 small {
     font-size: 24px;
 }
+.nav-tabs > li, .nav-pills > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+    zoom:1; /* hasLayout ie7 trigger */
+}
+.nav-tabs, .nav-pills {
+    text-align:center;
+}
