--- a/views/profil.html.twig
+++ b/views/profil.html.twig
@@ -80,9 +80,11 @@
                 </div>
             </div>
             <div class="form-group">
-                {{ form_row(visitorForm.save, { 'attr':  {
+                <div class="col-sm-offset-4 col-md-offset-5 col-sm-3">
+                    {{ form_row(visitorForm.save, { 'attr':  {
                     'class': 'btn btn-primary'
-                }}) }}
+                    }}) }}
+                </div>
             </div>
             {{ form_end(visitorForm) }}
             {% for flashMessage in app.session.flashbag.get('success') %}
